--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,115 +1,65 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
 
-@book{einstein1920relativity,
-  title={Relativity: the Special and General Theory},
-  author={Einstein, Albert},
-  year={1920},
-  publisher={Methuen & Co Ltd},
-  html={relativity.html}
-}
-
-@book{einstein1956investigations,
-  bibtex_show={true},
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation},
-  preview={brownian-motion.gif}
-}
-
-@article{einstein1950meaning,
-  abbr={AJP},
-  bibtex_show={true},
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics},
-  volume={18},
-  number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers}
-}
-
-@article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
+@article{deshmukh2024combined,
+  title={A combined first-principles and data-driven computational framework to analyze the surface structure, composition, and stability of binary alloy catalysts},
+  author={Deshmukh, Gaurav and Ghanekar, Pushkar and Greeley, Jeffrey},
+  journal={The Journal of Physical Chemistry C},
+  volume={128},
+  number={40},
+  pages={16952--16964},
+  year={2024},
+  publisher={ACS Publications},
   selected={true},
-  inspirehep_id = {3255}
+  chemrxiv={66760a495101a2ffa82d71f9},
+  preview={jpcc_toc.jpeg},
+  html={https://pubs.acs.org/doi/full/10.1021/acs.jpcc.4c04150}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{deshmukh2024active,
+  title={Active learning of ternary alloy structures and energies},
+  author={Deshmukh, Gaurav and Wichrowski, Noah J and Evangelou, Nikolaos and Ghanekar, Pushkar G and Deshpande, Siddharth and Kevrekidis, Ioannis G and Greeley, Jeffrey},
+  journal={npj Computational Materials},
+  volume={10},
+  number={1},
+  pages={116},
+  year={2024},
+  publisher={Nature Publishing Group UK London},
+  selected={true},
+  pdf={npj.pdf},
+  preview={npj_toc.png},
+  html={https://www.nature.com/articles/s41524-024-01256-z}
 }
 
-@article{einstein1905movement,
-  abbr={Ann. Phys.},
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.},
-  volume={17},
-  pages={549--560},
-  year={1905}
+@article{dean2024valence,
+  title={Valence-to-core X-ray emission spectroscopy to resolve the size-dependent valence electronic structure of Pt nanoparticles},
+  author={Dean, David P and Deshmukh, Gaurav and Russell, Christopher K and Zhu, Kuixin and Li, Christina W and Greeley, Jeffrey P and Leshchev, Denis and Stavitski, Eli and Miller, Jeffrey T},
+  journal={Catalysis Science \& Technology},
+  volume={14},
+  number={9},
+  pages={2580--2592},
+  year={2024},
+  publisher={Royal Society of Chemistry},
+  html={https://pubs.rsc.org/en/content/articlehtml/2024/cy/d3cy01554h},
+  preview={catscitech_toc.png}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
+@article{deshmukh2025first,
+  title={First Principles and Machine Learning-based Analysis of Sulfur Poisoning of High-Entropy Alloy Catalysts},
+  author={Deshmukh*, Gaurav and Bird, Madison and Greeley*, Jeffrey},
+  year={2025},
+  chemrxiv={68d3fcdaf4163037702b6371},
+  preview={sulfur_toc.png}
 }
 
-@Article{einstein1905photoelectriceffect,
-  bibtex_show={true},
-  abbr={Ann. Phys.},
-  title="{{\"U}ber einen die Erzeugung und Verwandlung des Lichtes betreffenden heuristischen Gesichtspunkt}",
-  author={Albert Einstein},
-  abstract={This is the abstract text.},
-  journal={Ann. Phys.},
-  volume={322},
-  number={6},
-  pages={132--148},
-  year={1905},
-  doi={10.1002/andp.19053220607},
-  award={Albert Einstein receveid the **Nobel Prize in Physics** 1921 *for his services to Theoretical Physics, and especially for his discovery of the law of the photoelectric effect*},
-  award_name={Nobel Prize}
-}
-
-@book{przibram1967letters,
-  bibtex_show={true},
-  title={Letters on wave mechanics},
-  author={Einstein, Albert and Schrödinger, Erwin and Planck, Max and Lorentz, Hendrik Antoon and Przibram, Karl},
-  year={1967},
-  publisher={Vision},
-  preview={wave-mechanics.gif},
-  abbr={Vision}
+@article{deshmukh2025deep,
+  title={Deep Learning for Computational Heterogeneous Catalysis: Fundamentals and Applications},
+  author={Deshmukh*, Gaurav and Ghanekar, Pushkar and Greeley*, Jeffrey},
+  journal={Journal of the Indian Institute of Science},
+  pages={1--25},
+  year={2025},
+  publisher={Springer},
+  selected={true},
+  html={https://link.springer.com/article/10.1007/s41745-025-00484-6}
 }
