Added JIISC TOC

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -61,5 +61,6 @@
   year={2025},
   publisher={Springer},
   selected={true},
-  html={https://link.springer.com/article/10.1007/s41745-025-00484-6}
+  html={https://link.springer.com/article/10.1007/s41745-025-00484-6},
+  preview={jiisc_toc.png}
 }
